Fixed cropping issue for larger images

--- a/components/common/asset/asset-img.module.css
+++ b/components/common/asset/asset-img.module.css
@@ -2,6 +2,8 @@
     /* animation: assetintoview 0.5s; */
     transition: opacity 0.5s ease;
     width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .opaque {
@@ -10,8 +12,10 @@
 
 .react-crop{
     height: 100%;
+    width: 100%;
 }
 
 .react-crop > div{
     height: 100%;
+    width: 100%;
 }
